<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        app:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/detailImage"
                android:scaleType="centerCrop"
                android:src="@drawable/chicken"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:contentDescription="TODO" />
            <TextView
                android:id="@+id/detailSolidName"
                android:padding="5dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/chicken_piece"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:background="#E4E1E1"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/minus"
                    android:src="@drawable/minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/quantity"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/plus"
                    android:src="@drawable/pluss"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="TODO" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/detailDescription"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meaty_portobello"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/your_name"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/number"
                android:inputType="phone"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/dollarsign"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="5"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/insertBtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#FFC535"
                android:innerRadius="0dp"
                android:layout_marginTop="20dp"
                android:shape="ring"
                app:cardUseCompatPadding="true"
                android:thicknessRatio="1.9"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:id="@+id/btnText"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/order_now"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
</LinearLayout>